--- a/Python_para_Data_Science.ipynb
+++ b/Python_para_Data_Science.ipynb
@@ -87,36 +87,12 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "!pip install matplotlib"
-      ],
+      "source": [],
       "metadata": {
-        "id": "Rv5sIo7NM5VS",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "528c36c3-36f2-4a9f-cbac-ae60610a854f"
+        "id": "Rv5sIo7NM5VS"
       },
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Requirement already satisfied: matplotlib in /usr/local/lib/python3.11/dist-packages (3.10.0)\n",
-            "Requirement already satisfied: contourpy>=1.0.1 in /usr/local/lib/python3.11/dist-packages (from matplotlib) (1.3.1)\n",
-            "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.11/dist-packages (from matplotlib) (0.12.1)\n",
-            "Requirement already satisfied: fonttools>=4.22.0 in /usr/local/lib/python3.11/dist-packages (from matplotlib) (4.57.0)\n",
-            "Requirement already satisfied: kiwisolver>=1.3.1 in /usr/local/lib/python3.11/dist-packages (from matplotlib) (1.4.8)\n",
-            "Requirement already satisfied: numpy>=1.23 in /usr/local/lib/python3.11/dist-packages (from matplotlib) (2.0.2)\n",
-            "Requirement already satisfied: packaging>=20.0 in /usr/local/lib/python3.11/dist-packages (from matplotlib) (24.2)\n",
-            "Requirement already satisfied: pillow>=8 in /usr/local/lib/python3.11/dist-packages (from matplotlib) (11.1.0)\n",
-            "Requirement already satisfied: pyparsing>=2.3.1 in /usr/local/lib/python3.11/dist-packages (from matplotlib) (3.2.3)\n",
-            "Requirement already satisfied: python-dateutil>=2.7 in /usr/local/lib/python3.11/dist-packages (from matplotlib) (2.8.2)\n",
-            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.11/dist-packages (from python-dateutil>=2.7->matplotlib) (1.17.0)\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -139,41 +115,331 @@
     {
       "cell_type": "code",
       "source": [
-        "import matplotlib"
+        "!pip install matplotlib==3.7.1"
       ],
       "metadata": {
-        "id": "_xUxLlZFM728"
+        "id": "_xUxLlZFM728",
+        "outputId": "e9dfcc7c-af33-478e-e4bf-b7101ae5942b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": 2,
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: matplotlib==3.7.1 in /usr/local/lib/python3.11/dist-packages (3.7.1)\n",
+            "Requirement already satisfied: contourpy>=1.0.1 in /usr/local/lib/python3.11/dist-packages (from matplotlib==3.7.1) (1.3.1)\n",
+            "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.11/dist-packages (from matplotlib==3.7.1) (0.12.1)\n",
+            "Requirement already satisfied: fonttools>=4.22.0 in /usr/local/lib/python3.11/dist-packages (from matplotlib==3.7.1) (4.57.0)\n",
+            "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.11/dist-packages (from matplotlib==3.7.1) (1.4.8)\n",
+            "Requirement already satisfied: numpy>=1.20 in /usr/local/lib/python3.11/dist-packages (from matplotlib==3.7.1) (1.26.4)\n",
+            "Requirement already satisfied: packaging>=20.0 in /usr/local/lib/python3.11/dist-packages (from matplotlib==3.7.1) (24.2)\n",
+            "Requirement already satisfied: pillow>=6.2.0 in /usr/local/lib/python3.11/dist-packages (from matplotlib==3.7.1) (11.1.0)\n",
+            "Requirement already satisfied: pyparsing>=2.3.1 in /usr/local/lib/python3.11/dist-packages (from matplotlib==3.7.1) (3.2.3)\n",
+            "Requirement already satisfied: python-dateutil>=2.7 in /usr/local/lib/python3.11/dist-packages (from matplotlib==3.7.1) (2.8.2)\n",
+            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.11/dist-packages (from python-dateutil>=2.7->matplotlib==3.7.1) (1.17.0)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from matplotlib import numpy as np"
+      ],
+      "metadata": {
+        "id": "xy035zQzM75b"
+      },
+      "execution_count": 5,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "matplotlib.__version__"
+        "lista = [8, 12, 54, 23, 43, 1, 90, 87, 105, 77]"
       ],
       "metadata": {
-        "id": "xy035zQzM75b",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "outputId": "e1cf7830-3870-46a1-b6bf-5042f6f8ebac"
+        "id": "OxWNXfSP5r5Y"
       },
-      "execution_count": 3,
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import random"
+      ],
+      "metadata": {
+        "id": "8gNWGwvZ69cJ"
+      },
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numero_aleatorio = random.choice(lista)\n",
+        "\n",
+        "print(f\"Número elegido al azar: {numero_aleatorio}\")"
+      ],
+      "metadata": {
+        "id": "TdreLJ1F7Aix",
+        "outputId": "58f8ddde-b7aa-4d88-ecd4-c3d8603dbc03",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "'3.10.0'"
-            ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            }
-          },
-          "metadata": {},
-          "execution_count": 3
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Número elegido al azar: 105\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "number = random.randrange(100)\n",
+        "print(\"Generated random number (less than 100):\", number)"
+      ],
+      "metadata": {
+        "id": "qCDFP_t37YBE",
+        "outputId": "f176e411-f741-4f16-8a1f-634948ad8309",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Generated random number (less than 100): 56\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Solicitar los números al usuario\n",
+        "base = int(input(\"Ingresa el primer número (base): \"))\n",
+        "exponente = int(input(\"Ingresa el segundo número (exponente): \"))\n",
+        "\n",
+        "# Calcular la potencia\n",
+        "resultado = base ** exponente\n",
+        "\n",
+        "# Mostrar el resultado\n",
+        "print(f\"{base} elevado a la {exponente} es igual a {resultado}\")"
+      ],
+      "metadata": {
+        "id": "J-w5f5Uu7vjh",
+        "outputId": "cf414d51-cd9c-4b21-f303-2fd5be70c85b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ingresa el primer número (base): 2\n",
+            "Ingresa el segundo número (exponente): 3\n",
+            "2 elevado a la 3 es igual a 8\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Pedir al usuario el número de participantes con validación\n",
+        "def pedir_participantes():\n",
+        "    while True:\n",
+        "        try:\n",
+        "            cantidad = int(input(\"Ingresa el número de participantes: \"))\n",
+        "            if cantidad < 1:\n",
+        "                print(\"Debe haber al menos un participante.\")\n",
+        "            else:\n",
+        "                return cantidad\n",
+        "        except ValueError:\n",
+        "            print(\"Por favor, ingresa un número entero válido.\")\n",
+        "\n",
+        "# Solicitar la cantidad\n",
+        "num_participantes = pedir_participantes()\n",
+        "\n",
+        "# Sortear el número ganador\n",
+        "ganador = random.randint(1, num_participantes)\n",
+        "\n",
+        "# Mostrar el número sorteado\n",
+        "print(f\" El número ganador del sorteo es: {ganador} 😊\")"
+      ],
+      "metadata": {
+        "id": "XKsIasVp8Rkh",
+        "outputId": "dd32b071-0d7a-4836-a2a3-424069291a3b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ingresa el número de participantes: 2\n",
+            " El número ganador del sorteo es: 1 😊\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Solicitar el nombre al usuario\n",
+        "nombre_usuario = input(\"Ingresa tu nombre: \")\n",
+        "\n",
+        "# Generar un token par entre 1000 y 9998\n",
+        "token_generado = random.choice([num for num in range(1000, 9999) if num % 2 == 0])\n",
+        "\n",
+        "# Mostrar el mensaje con el token\n",
+        "print(f\"Hola, {nombre_usuario}, tu token de acceso es {token_generado} ¡Bienvenido/a!😎\")"
+      ],
+      "metadata": {
+        "id": "M6sv08bG84KD",
+        "outputId": "d4d2364c-02d3-44ca-bee3-b9bbf5ee8ae8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ingresa tu nombre: olivia\n",
+            "Hola, olivia, tu token de acceso es 9378 ¡Bienvenido/a!😎\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Lista de frutas disponibles\n",
+        "frutas = [\"manzana\", \"banana\", \"uva\", \"pera\", \"mango\", \"coco\", \"sandia\", \"fresa\", \"naranja\", \"maracuya\", \"kiwi\", \"cereza\"]\n",
+        "\n",
+        "# Selección aleatoria de 3 frutas distintas\n",
+        "ensalada_sorpresa = random.sample(frutas, 3)\n",
+        "\n",
+        "# Mostrar la ensalada de frutas sorpresa\n",
+        "print(\"¡Tu ensalada de frutas sorpresa contiene:👌\")\n",
+        "for fruta in ensalada_sorpresa:\n",
+        "    print(f\" - {fruta.capitalize()}\")"
+      ],
+      "metadata": {
+        "id": "8mWthmIn9N_b",
+        "outputId": "5d4b5743-97de-4b2a-df29-3851b96bc80b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "¡Tu ensalada de frutas sorpresa contiene:👌\n",
+            " - Kiwi\n",
+            " - Fresa\n",
+            " - Coco\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import math\n",
+        "# Lista de números\n",
+        "numeros = [2, 8, 15, 23, 91, 112, 256]\n",
+        "\n",
+        "# Calcular la raíz cuadrada y verificar si es un número entero\n",
+        "for numero in numeros:\n",
+        "     raiz = math.sqrt(numero)\n",
+        "     if raiz.is_integer():\n",
+        "        print(f\"La raíz cuadrada de {numero} es {int(raiz)}, que es un número entero.\")\n",
+        "     else:\n",
+        "        print(f\"La raíz cuadrada de {numero} es {raiz:.2f}, que no es un número entero.\")"
+      ],
+      "metadata": {
+        "id": "VkM6AD9u9nLs",
+        "outputId": "345f073d-17fe-4d90-cb17-d024b71812a3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "La raíz cuadrada de 2 es 1.41, que no es un número entero.\n",
+            "La raíz cuadrada de 8 es 2.83, que no es un número entero.\n",
+            "La raíz cuadrada de 15 es 3.87, que no es un número entero.\n",
+            "La raíz cuadrada de 23 es 4.80, que no es un número entero.\n",
+            "La raíz cuadrada de 91 es 9.54, que no es un número entero.\n",
+            "La raíz cuadrada de 112 es 10.58, que no es un número entero.\n",
+            "La raíz cuadrada de 256 es 16, que es un número entero.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Solicitar el radio al usuario\n",
+        "radio = float(input(\"Ingresa el radio del jardín en metros: \"))\n",
+        "\n",
+        "# Calcular el área del jardín (círculo)\n",
+        "area = math.pi * radio**2\n",
+        "\n",
+        "# Calcular el costo del césped\n",
+        "precio_por_metro_cuadrado = 25.00\n",
+        "costo_total = area * precio_por_metro_cuadrado\n",
+        "\n",
+        "# Mostrar el valor a pagar\n",
+        "print(f\"El área del jardín es {area:.2f} m² y el valor a pagar por el césped es $ {costo_total:.2f}.\")"
+      ],
+      "metadata": {
+        "id": "IoJHq0Gi-POw",
+        "outputId": "141d4c43-0854-4062-a323-d1af3d90a7db",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ingresa el radio del jardín en metros: 30\n",
+            "El área del jardín es 2827.43 m² y el valor a pagar por el césped es $ 70685.83.\n"
+          ]
         }
       ]
     },
@@ -187,6 +453,15 @@
       "metadata": {
         "id": "oMxkV9-6GXwH"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "upUNPvTf68IP"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
