--- a/Python_para_Data_Science.ipynb
+++ b/Python_para_Data_Science.ipynb
@@ -1700,39 +1700,115 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "nombres\n",
+        "['Juan', 'Maria', 'José', 'Claudia', 'Ana']"
+      ],
       "metadata": {
-        "id": "YA1zJ0G6LkTy"
+        "id": "YA1zJ0G6LkTy",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e5568c0a-816c-4087-a410-f346b1aa9c7a"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['Juan', 'Maria', 'José', 'Claudia', 'Ana']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "from random import randint\n",
+        "\n",
+        "def genera_numero():\n",
+        "  return randint(0,999)\n",
+        ""
+      ],
       "metadata": {
         "id": "yBzPwhGiLkWa"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "genera_numero()"
+      ],
       "metadata": {
-        "id": "9qgGAjSyLndK"
+        "id": "9qgGAjSyLndK",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8825bbaf-a2da-4c49-fa87-4ca481e8cda5"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "315"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "codigos_estudiantes = []\n",
+        "\n",
+        "for i in range(len(nombres)):\n",
+        "   codigos_estudiantes.append((nombres[i],nombres[i][0]+str(genera_numero())))"
+      ],
       "metadata": {
         "id": "jVRxtOyeLngM"
       },
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "codigos_estudiantes"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "sC9IBqO0xxsf",
+        "outputId": "66986bbd-3858-4f86-ad9f-4cee879ee996"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[('Juan', 'J722'),\n",
+              " ('Maria', 'M408'),\n",
+              " ('José', 'J821'),\n",
+              " ('Claudia', 'C809'),\n",
+              " ('Ana', 'A657')]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
     },
     {
       "cell_type": "markdown",
