--- a/Python_para_Data_Science.ipynb
+++ b/Python_para_Data_Science.ipynb
@@ -1866,26 +1866,46 @@
       "metadata": {
         "id": "J_atQRQdlpNe"
       },
-      "execution_count": null,
+      "execution_count": 28,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "notas = [[8.0, 9.0, 10.0], [9.0, 7.0, 6.0], [3.4, 7.0, 7.0], [5.5, 6.6, 8.0], [6.0, 10.0, 9.5]]\n"
+      ],
       "metadata": {
         "id": "h7LeBrgnLAG6"
       },
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "promedios = [round(promedio(nota),1) for nota in notas]\n",
+        "promedios"
+      ],
       "metadata": {
-        "id": "3j8_H7e8LAJZ"
+        "id": "3j8_H7e8LAJZ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2c3e5218-580e-4b23-d34a-e2c3d8a1cf1a"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[9.0, 7.3, 5.8, 6.7, 8.5]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 29
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1912,21 +1932,42 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "nombres = [('Juan', 'J722'), ('Maria', 'M408'), ('José', 'J821'), ('Claudia', 'C809'), ('Ana', 'A657')]\n",
+        "promedios = [9.0, 7.3, 5.8, 6.7, 8.5]"
+      ],
       "metadata": {
         "id": "QK-ubmmrLC7I"
       },
-      "execution_count": null,
+      "execution_count": 30,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "nombres =  [nombre[0] for nombre in nombres]\n",
+        "nombres"
+      ],
       "metadata": {
-        "id": "df1Q8GGELC9b"
+        "id": "df1Q8GGELC9b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "772bd880-9d56-4a72-de6f-5b53b37f800a"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['Juan', 'Maria', 'José', 'Claudia', 'Ana']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 31
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1942,21 +1983,57 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "estudiantes = list(zip(nombres,promedios))\n",
+        "estudiantes"
+      ],
       "metadata": {
-        "id": "841v92WvLEol"
+        "id": "841v92WvLEol",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6b38c842-855a-46c9-fc83-0298af5ec708"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[('Juan', 9.0), ('Maria', 7.3), ('José', 5.8), ('Claudia', 6.7), ('Ana', 8.5)]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 33
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "candidatos = [estudiante[0] for estudiante in estudiantes if estudiante[1] >= 8]\n",
+        "candidatos"
+      ],
       "metadata": {
-        "id": "U8b4G_2oLErp"
+        "id": "U8b4G_2oLErp",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c55f55d2-787d-4a59-a871-351564fcace0"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['Juan', 'Ana']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 34
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1988,11 +2065,15 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "nombres = [('Juan', 'J722'), ('Maria', 'M408'), ('José', 'J821'), ('Claudia', 'C809'), ('Ana', 'A657')]\n",
+        "notas = [[8.0, 9.0, 10.0], [9.0, 7.0, 6.0], [3.4, 7.0, 7.0], [5.5, 6.6, 8.0], [6.0, 10.0, 9.5]]\n",
+        "promedios = [9.0, 7.3, 5.8, 6.7, 8.5]"
+      ],
       "metadata": {
         "id": "YGQIaCzkLGqd"
       },
-      "execution_count": null,
+      "execution_count": 35,
       "outputs": []
     },
     {
