--- a/Python_para_Data_Science.ipynb
+++ b/Python_para_Data_Science.ipynb
@@ -1552,7 +1552,7 @@
       "metadata": {
         "id": "jlEP-c2YthpB"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1568,9 +1568,9 @@
         "    notas.append(notas_grupo[i])"
       ],
       "metadata": {
-        "id": "azR_cX-ILghB"
+        "id": "egWYkx2utqRb"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1579,13 +1579,13 @@
         "nombres"
       ],
       "metadata": {
-        "id": "GhfsJvs9LgjY",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4be28810-8861-445c-cbc1-e7bfb033688e"
+        "id": "JmdWhHt3wRLN",
+        "outputId": "36ec3a7d-4f58-4c9f-a8bf-6a99e11efac7"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1595,7 +1595,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 57
         }
       ]
     },
@@ -1605,13 +1605,13 @@
         "notas"
       ],
       "metadata": {
-        "id": "tB8FA20gLiog",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c957b921-fd6e-436f-fddd-305ae1720e29"
+        "id": "qocTqeBtwRQ0",
+        "outputId": "8fb1ae57-9fc7-4514-e749-3e6fcc9e8aa1"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1621,7 +1621,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 58
         }
       ]
     },
@@ -1629,13 +1629,14 @@
       "cell_type": "code",
       "source": [
         "notas_separadas = []\n",
-        "for i in range(0,len(notas),3):\n",
-        "  notas_separadas.append([notas[i],notas[i+1],notas[i+2]])"
+        "\n",
+        "for i in range(0, len(notas),3):\n",
+        "  notas_separadas.append([notas[i],notas[i+1], notas[i+2]])"
       ],
       "metadata": {
-        "id": "SCi8Jl82Liqo"
+        "id": "Qr_huE3bxWsS"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1647,10 +1648,10 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "J0898atDn5u4",
-        "outputId": "8a22b24d-7483-4172-df23-afef5975e9d5"
+        "id": "q57t7UR8xWvY",
+        "outputId": "1d768ac5-4439-42e4-8424-966260cd8e27"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1664,7 +1665,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 60
         }
       ]
     },
@@ -1701,17 +1702,16 @@
     {
       "cell_type": "code",
       "source": [
-        "nombres\n",
-        "['Juan', 'Maria', 'José', 'Claudia', 'Ana']"
+        "nombres"
       ],
       "metadata": {
-        "id": "YA1zJ0G6LkTy",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e5568c0a-816c-4087-a410-f346b1aa9c7a"
+        "id": "5rnmqzOAyz5C",
+        "outputId": "7e895e9b-b6b7-4e05-88e6-6ee8b2ddb1f1"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1721,7 +1721,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 61
         }
       ]
     },
@@ -1731,13 +1731,12 @@
         "from random import randint\n",
         "\n",
         "def genera_numero():\n",
-        "  return randint(0,999)\n",
-        ""
+        "  return randint(0,999)"
       ],
       "metadata": {
-        "id": "yBzPwhGiLkWa"
+        "id": "yJF70WxGyz7t"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1746,67 +1745,97 @@
         "genera_numero()"
       ],
       "metadata": {
-        "id": "9qgGAjSyLndK",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8825bbaf-a2da-4c49-fa87-4ca481e8cda5"
+        "id": "LXcQQ_bdy0Sp",
+        "outputId": "364d8ea5-1f4f-4233-91ba-cd59c7d43485"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "315"
+              "220"
             ]
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 63
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "codigos_estudiantes = []\n",
-        "\n",
-        "for i in range(len(nombres)):\n",
-        "   codigos_estudiantes.append((nombres[i],nombres[i][0]+str(genera_numero())))"
-      ],
-      "metadata": {
-        "id": "jVRxtOyeLngM"
-      },
-      "execution_count": 22,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "codigos_estudiantes"
+        "nombres[0][0]"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 36
         },
-        "id": "sC9IBqO0xxsf",
-        "outputId": "66986bbd-3858-4f86-ad9f-4cee879ee996"
+        "id": "UVWBQ-yJ1ZLr",
+        "outputId": "d6d51199-3631-4276-ba3b-6c273ee06015"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[('Juan', 'J722'),\n",
-              " ('Maria', 'M408'),\n",
-              " ('José', 'J821'),\n",
-              " ('Claudia', 'C809'),\n",
-              " ('Ana', 'A657')]"
+              "'J'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 64
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "codigo_estudiantes = []\n",
+        "\n",
+        "for i in range(len(nombres)):\n",
+        "  codigo_estudiantes.append((nombres[i],nombres[i][0]+str(genera_numero())))"
+      ],
+      "metadata": {
+        "id": "5NzLjC1g1CXp"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "codigo_estudiantes"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "go5i6Mfc1CaN",
+        "outputId": "5bfcebb0-5560-4ab9-af96-0facc242940f"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[('Juan', 'J63'),\n",
+              " ('Maria', 'M469'),\n",
+              " ('José', 'J985'),\n",
+              " ('Claudia', 'C546'),\n",
+              " ('Ana', 'A272')]"
             ]
           },
           "metadata": {},
-          "execution_count": 23
+          "execution_count": 96
         }
       ]
     },
@@ -1866,18 +1895,18 @@
       "metadata": {
         "id": "J_atQRQdlpNe"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "notas = [[8.0, 9.0, 10.0], [9.0, 7.0, 6.0], [3.4, 7.0, 7.0], [5.5, 6.6, 8.0], [6.0, 10.0, 9.5]]\n"
+        "notas = [[8.0, 9.0, 10.0], [9.0, 7.0, 6.0], [3.4, 7.0, 7.0], [5.5, 6.6, 8.0], [6.0, 10.0, 9.5]]"
       ],
       "metadata": {
-        "id": "h7LeBrgnLAG6"
+        "id": "kX0wgMPYGSsW"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1887,13 +1916,13 @@
         "promedios"
       ],
       "metadata": {
-        "id": "3j8_H7e8LAJZ",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2c3e5218-580e-4b23-d34a-e2c3d8a1cf1a"
+        "id": "3ufeCT2gGSvB",
+        "outputId": "b31cdd90-c87c-42bf-d453-a89a8fa62b7a"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1903,7 +1932,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 29
+          "execution_count": 111
         }
       ]
     },
@@ -1933,29 +1962,29 @@
     {
       "cell_type": "code",
       "source": [
-        "nombres = [('Juan', 'J722'), ('Maria', 'M408'), ('José', 'J821'), ('Claudia', 'C809'), ('Ana', 'A657')]\n",
+        "nombres = [('Juan', 'J63'), ('Maria', 'M469'), ('José', 'J985'), ('Claudia', 'C546'), ('Ana', 'A272')]\n",
         "promedios = [9.0, 7.3, 5.8, 6.7, 8.5]"
       ],
       "metadata": {
-        "id": "QK-ubmmrLC7I"
+        "id": "T71KQWHAGHR8"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "nombres =  [nombre[0] for nombre in nombres]\n",
+        "nombres = [nombre[0] for nombre in nombres]\n",
         "nombres"
       ],
       "metadata": {
-        "id": "df1Q8GGELC9b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "772bd880-9d56-4a72-de6f-5b53b37f800a"
+        "id": "XBbqGxNJGHY3",
+        "outputId": "e71725cb-74df-42e5-dd87-f4efcb6c9ae7"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1965,7 +1994,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 31
+          "execution_count": 113
         }
       ]
     },
@@ -1988,13 +2017,13 @@
         "estudiantes"
       ],
       "metadata": {
-        "id": "841v92WvLEol",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6b38c842-855a-46c9-fc83-0298af5ec708"
+        "id": "MKzG-jlzGF91",
+        "outputId": "fe699d1f-4c11-444c-aefa-a05b29587974"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2004,7 +2033,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 33
+          "execution_count": 115
         }
       ]
     },
@@ -2015,13 +2044,13 @@
         "candidatos"
       ],
       "metadata": {
-        "id": "U8b4G_2oLErp",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c55f55d2-787d-4a59-a871-351564fcace0"
+        "id": "ezgiJqIjGGAx",
+        "outputId": "31f9e5f4-8af8-483b-93c3-e5a7d007b580"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2031,7 +2060,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 34
+          "execution_count": 116
         }
       ]
     },
@@ -2066,24 +2095,42 @@
     {
       "cell_type": "code",
       "source": [
-        "nombres = [('Juan', 'J722'), ('Maria', 'M408'), ('José', 'J821'), ('Claudia', 'C809'), ('Ana', 'A657')]\n",
+        "nombres = [('Juan', 'J63'), ('Maria', 'M469'), ('José', 'J985'), ('Claudia', 'C546'), ('Ana', 'A272')]\n",
         "notas = [[8.0, 9.0, 10.0], [9.0, 7.0, 6.0], [3.4, 7.0, 7.0], [5.5, 6.6, 8.0], [6.0, 10.0, 9.5]]\n",
         "promedios = [9.0, 7.3, 5.8, 6.7, 8.5]"
       ],
       "metadata": {
-        "id": "YGQIaCzkLGqd"
+        "id": "6QvYfqLVMO8U"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "situacion = ['Aprobado(a)' if promedio >= 7 else 'Reprobado(a)' for promedio in promedios]\n",
+        "situacion"
+      ],
       "metadata": {
-        "id": "OAAQHwE1LGs2"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6CAWdMdiL_ol",
+        "outputId": "ebbdc32e-b8be-469d-a73c-d15886530052"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['Aprobado(a)', 'Aprobado(a)', 'Reprobado(a)', 'Reprobado(a)', 'Aprobado(a)']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 122
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2099,21 +2146,41 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "registros = [x for x in [nombres, notas, promedios, situacion]]\n",
+        "registros"
+      ],
       "metadata": {
-        "id": "1Dj6R1vTLIbI"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "DLvT7DGJJ0tP",
+        "outputId": "b8961c78-eb21-43b2-ca28-4f66dc85698e"
       },
       "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "cTLEQQ2eLIqc"
-      },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[[('Juan', 'J63'),\n",
+              "  ('Maria', 'M469'),\n",
+              "  ('José', 'J985'),\n",
+              "  ('Claudia', 'C546'),\n",
+              "  ('Ana', 'A272')],\n",
+              " [[8.0, 9.0, 10.0],\n",
+              "  [9.0, 7.0, 6.0],\n",
+              "  [3.4, 7.0, 7.0],\n",
+              "  [5.5, 6.6, 8.0],\n",
+              "  [6.0, 10.0, 9.5]],\n",
+              " [9.0, 7.3, 5.8, 6.7, 8.5],\n",
+              " ['Aprobado(a)', 'Aprobado(a)', 'Reprobado(a)', 'Reprobado(a)', 'Aprobado(a)']]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 123
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2126,21 +2193,41 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "lista_completa = [nombres,notas,promedios,situacion]\n",
+        "lista_completa"
+      ],
       "metadata": {
-        "id": "1tEtWzSoLKKg"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KnIjo2iJJ3J3",
+        "outputId": "b055e624-7fb2-4b20-a84f-6347bc978c9d"
       },
       "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "lRk02Bm5LMB3"
-      },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[[('Juan', 'J63'),\n",
+              "  ('Maria', 'M469'),\n",
+              "  ('José', 'J985'),\n",
+              "  ('Claudia', 'C546'),\n",
+              "  ('Ana', 'A272')],\n",
+              " [[8.0, 9.0, 10.0],\n",
+              "  [9.0, 7.0, 6.0],\n",
+              "  [3.4, 7.0, 7.0],\n",
+              "  [5.5, 6.6, 8.0],\n",
+              "  [6.0, 10.0, 9.5]],\n",
+              " [9.0, 7.3, 5.8, 6.7, 8.5],\n",
+              " ['Aprobado(a)', 'Aprobado(a)', 'Reprobado(a)', 'Reprobado(a)', 'Aprobado(a)']]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 124
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2186,30 +2273,94 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "lista_completa = [[('Juan', 'J63'),  ('Maria', 'M469'),  ('José', 'J985'),  ('Claudia', 'C546'),  ('Ana', 'A272')],\n",
+        "                  [[8.0, 9.0, 10.0],  [9.0, 7.0, 6.0],  [3.4, 7.0, 7.0], [5.5, 6.6, 8.0],  [6.0, 10.0, 9.5]],\n",
+        "                  [9.0, 7.3, 5.8, 6.7, 8.5],\n",
+        "                  ['Aprobado(a)', 'Aprobado(a)', 'Reprobado(a)', 'Reprobado(a)', 'Aprobado(a)']]"
+      ],
       "metadata": {
-        "id": "GuTwYw8NLNST"
+        "id": "lrOHWR44StN1"
       },
       "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "columnas = ['Notas','Promedio Final','Situación']\n",
+        "\n",
+        "registro = {columna[i]:lista_completa[i+1] for i in range(len(columnas))}\n",
+        "registro"
+      ],
       "metadata": {
-        "id": "Ka1JPCuvLP4x"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yOZlNDBjStQd",
+        "outputId": "0e4e3911-fb09-4316-eb78-8e688f5da41b"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'Notas': [[8.0, 9.0, 10.0],\n",
+              "  [9.0, 7.0, 6.0],\n",
+              "  [3.4, 7.0, 7.0],\n",
+              "  [5.5, 6.6, 8.0],\n",
+              "  [6.0, 10.0, 9.5]],\n",
+              " 'Promedio Final': [9.0, 7.3, 5.8, 6.7, 8.5],\n",
+              " 'Situación': ['Aprobado(a)',\n",
+              "  'Aprobado(a)',\n",
+              "  'Reprobado(a)',\n",
+              "  'Reprobado(a)',\n",
+              "  'Aprobado(a)']}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 132
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "registro['Estudiante'] = [lista_completa[0][i][0] for i in range(len(lista_completa[0]))]\n",
+        "registro"
+      ],
       "metadata": {
-        "id": "4GhlzfLbLP8L"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kxslDASNStSb",
+        "outputId": "d4cf596b-d925-4bd8-d44a-95e4f04ae0e8"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'Notas': [[8.0, 9.0, 10.0],\n",
+              "  [9.0, 7.0, 6.0],\n",
+              "  [3.4, 7.0, 7.0],\n",
+              "  [5.5, 6.6, 8.0],\n",
+              "  [6.0, 10.0, 9.5]],\n",
+              " 'Promedio Final': [9.0, 7.3, 5.8, 6.7, 8.5],\n",
+              " 'Situación': ['Aprobado(a)',\n",
+              "  'Aprobado(a)',\n",
+              "  'Reprobado(a)',\n",
+              "  'Reprobado(a)',\n",
+              "  'Aprobado(a)'],\n",
+              " 'Estudiante': ['Juan', 'Maria', 'José', 'Claudia', 'Ana']}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 133
+        }
+      ]
     },
     {
       "cell_type": "markdown",
