--- a/AluraStoreLatam.ipynb
+++ b/AluraStoreLatam.ipynb
@@ -852,7 +852,7 @@
         "====Facturación total====\n",
         "\n",
         "-Valledupar: $1 177 600\n",
-        "La segunda más baja   (Inírida)    factura $2 864 800 — ¡más del doble!\n",
+        "-(Inírida --la --segunda-- mas-- baja -- factura $2 864 800 — ¡más del doble!\n",
         "\n",
         "-Volumen de ventas:\n",
         "Sólo 2 ventas en su categoría top y 1 venta en su producto top.\n",
@@ -888,9 +888,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wS0rh6m9bdKA",
-        "outputId": "8b0ea247-a590-4b2b-c71a-b97ce0fbd73f"
+        "outputId": "f462342a-9ca4-4bd8-a8cd-0b6fc4f2c05b"
       },
-      "execution_count": 118,
+      "execution_count": 119,
       "outputs": [
         {
           "output_type": "stream",
@@ -904,7 +904,7 @@
             "====Facturación total====\n",
             "\n",
             "-Valledupar: $1 177 600\n",
-            "La segunda más baja   (Inírida)    factura $2 864 800 — ¡más del doble!\n",
+            "-(Inírida la segunda mas baja -- factura $2 864 800 — ¡más del doble!\n",
             "\n",
             "-Volumen de ventas:\n",
             "Sólo 2 ventas en su categoría top y 1 venta en su producto top.\n",
