--- a/AluraStoreLatam.ipynb
+++ b/AluraStoreLatam.ipynb
@@ -852,7 +852,7 @@
         "====Facturación total====\n",
         "\n",
         "-Valledupar: $1 177 600\n",
-        "-(Inírida --la --segunda-- mas-- baja -- factura $2 864 800 — ¡más del doble!\n",
+        "-Inírida --la --segunda-- mas-- baja -- factura $2 864 800 — ¡más del doble!\n",
         "\n",
         "-Volumen de ventas:\n",
         "Sólo 2 ventas en su categoría top y 1 venta en su producto top.\n",
