--- a/AluraStoreLatam.ipynb
+++ b/AluraStoreLatam.ipynb
@@ -37,14 +37,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 108,
+      "execution_count": 120,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 400
         },
         "id": "T3EvaeQ_INIL",
-        "outputId": "a5407c57-0745-475e-b562-18c949d8b305"
+        "outputId": "2e0e0ea4-b42a-405f-d43d-ffda70c4c42b"
       },
       "outputs": [
         {
@@ -74,7 +74,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-adc3575b-93fe-4a2b-85e8-68f4b0d1a957\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-c3bd4dce-eb32-43c2-851c-df01c8f4d172\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -189,7 +189,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-adc3575b-93fe-4a2b-85e8-68f4b0d1a957')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c3bd4dce-eb32-43c2-851c-df01c8f4d172')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -241,12 +241,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-adc3575b-93fe-4a2b-85e8-68f4b0d1a957 button.colab-df-convert');\n",
+              "        document.querySelector('#df-c3bd4dce-eb32-43c2-851c-df01c8f4d172 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-adc3575b-93fe-4a2b-85e8-68f4b0d1a957');\n",
+              "        const element = document.querySelector('#df-c3bd4dce-eb32-43c2-851c-df01c8f4d172');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -266,8 +266,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-604c545e-22a1-47a2-8cf9-f0f9b8cff89d\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-604c545e-22a1-47a2-8cf9-f0f9b8cff89d')\"\n",
+              "    <div id=\"df-ed5ca447-b438-4b21-8482-064440e695aa\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-ed5ca447-b438-4b21-8482-064440e695aa')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -386,7 +386,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-604c545e-22a1-47a2-8cf9-f0f9b8cff89d button');\n",
+              "            document.querySelector('#df-ed5ca447-b438-4b21-8482-064440e695aa button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -403,7 +403,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 108
+          "execution_count": 120
         }
       ],
       "source": [
@@ -437,13 +437,13 @@
       "source": [
         "\n",
         "\n",
-        "# Crear columna de facturación (precio + costo de envío)\n",
+        "# Creamos la columna de facturación (precio + costo de envío)\n",
         "tienda[\"Facturación\"] = tienda[\"Precio\"] + tienda[\"Costo de envío\"]\n",
         "\n",
-        "# Agrupar por tienda y sumar la facturación\n",
+        "# Agrupamos por tienda y sumamos la facturación\n",
         "facturacion_por_tienda = tienda.groupby(\"Lugar de Compra\")[\"Facturación\"].sum().sort_values(ascending=False)\n",
         "\n",
-        "# Mostrar resultados\n",
+        "# Mostramos los resultados\n",
         "print(\"Facturación total por tienda:\")\n",
         "print(facturacion_por_tienda)"
       ],
@@ -452,9 +452,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "25b037cd-ebea-4fe0-e652-a44fa22fc736"
+        "outputId": "1941ec45-1cff-4cf3-8722-39a4228ed063"
       },
-      "execution_count": 109,
+      "execution_count": 121,
       "outputs": [
         {
           "output_type": "stream",
@@ -491,14 +491,14 @@
       "source": [
         "import matplotlib.pyplot as plt\n",
         "\n",
-        "# 1. Asegúrate de tener el DataFrame con la columna 'Facturación' y la etiqueta de tienda:\n",
+        "# 1. NOs asegúramos de tener el DataFrame con la columna 'Facturación' y la etiqueta de tienda:\n",
         "tienda[\"Facturación\"] = tienda[\"Precio\"] + tienda[\"Costo de envío\"]\n",
         "tienda[\"Tienda\"] = tienda[\"Lugar de Compra\"]\n",
         "\n",
-        "# 2. Calcula la facturación total por tienda:\n",
+        "# 2. Calculamos la facturación total por tienda:\n",
         "facturacion_total = tienda.groupby(\"Tienda\")[\"Facturación\"].sum()\n",
         "\n",
-        "# 3. Dibuja el gráfico de barras:\n",
+        "# 3. Dibujamos el gráfico de barras:\n",
         "plt.figure(figsize=(8, 5))\n",
         "plt.bar(facturacion_total.index, facturacion_total.values)\n",
         "plt.title(\"Facturación Total por Tienda\")\n",
@@ -514,9 +514,9 @@
           "height": 471
         },
         "id": "tSvDxHl2zJ6W",
-        "outputId": "3003badd-c0e5-47cd-fa0a-894ae48165f4"
+        "outputId": "5a8b18b5-e0a2-400a-ffda-9d761a391b78"
       },
-      "execution_count": 110,
+      "execution_count": 122,
       "outputs": [
         {
           "output_type": "display_data",
@@ -542,13 +542,13 @@
     {
       "cell_type": "code",
       "source": [
-        " # Contar cuántas veces se vendió cada categoría por tienda\n",
+        " # Contamos cuántas veces se vendió cada categoría por tienda\n",
         "ventas_categoria = tienda.groupby([\"Lugar de Compra\", \"Categoría del Producto\"]).size().reset_index(name=\"Cantidad de Ventas\")\n",
         "\n",
-        "# Ordenar por tienda y cantidad de ventas\n",
+        "# Ordenamos por tienda y cantidad de ventas\n",
         "ventas_categoria = ventas_categoria.sort_values(by=[\"Lugar de Compra\", \"Cantidad de Ventas\"], ascending=[True, False])\n",
         "\n",
-        "# Mostrar el top 1 por tienda (categoría más popular por tienda)\n",
+        "# Mostramos el top 1 por tienda (categoría más popular por tienda)\n",
         "top_categoria_por_tienda = ventas_categoria.groupby(\"Lugar de Compra\").first().reset_index()\n",
         "\n",
         "print(\"Categoría más vendida por tienda:\")\n",
@@ -559,9 +559,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "decf1f0b-5382-45a3-b7f2-16a2ca7fddbd"
+        "outputId": "ed541d36-ec0e-4075-b1c0-07350334c930"
       },
-      "execution_count": 111,
+      "execution_count": 123,
       "outputs": [
         {
           "output_type": "stream",
@@ -604,10 +604,10 @@
     {
       "cell_type": "code",
       "source": [
-        " # Agrupar por tienda y calcular la media de la calificación\n",
+        " # Agrupamos por tienda y calcular la media de la calificación\n",
         "calificacion_promedio = tienda.groupby(\"Lugar de Compra\")[\"Calificación\"].mean().round(2)\n",
         "\n",
-        "# Mostrar resultados\n",
+        "# Mostramos resultados\n",
         "print(\" Calificación promedio por tienda:\")\n",
         "print(calificacion_promedio)\n",
         "\n",
@@ -618,9 +618,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0a637a77-f3b7-48b6-8d17-306dbc90ebd6"
+        "outputId": "413b9f4a-503a-4eab-efdb-f3c7635a5e80"
       },
-      "execution_count": 112,
+      "execution_count": 124,
       "outputs": [
         {
           "output_type": "stream",
@@ -664,19 +664,19 @@
     {
       "cell_type": "code",
       "source": [
-        "# Contar cuántas veces se vendió cada producto en cada tienda\n",
+        "# Contamos cuántas veces se vendió cada producto en cada tienda\n",
         "\n",
         "ventas_productos = tienda.groupby([\"Lugar de Compra\", \"Producto\"]).size().reset_index(name=\"Cantidad de Ventas\")\n",
         "\n",
-        "# Obtener los productos más vendidos por tienda\n",
+        "# Obtenemos los productos más vendidos por tienda\n",
         "productos_mas_vendidos = ventas_productos.sort_values([\"Lugar de Compra\", \"Cantidad de Ventas\"], ascending=[True, False])\n",
         "top_mas_vendidos = productos_mas_vendidos.groupby(\"Lugar de Compra\").first().reset_index()\n",
         "\n",
-        "# Obtener los productos menos vendidos por tienda\n",
+        "# Obtenenemos los productos menos vendidos por tienda\n",
         "productos_menos_vendidos = ventas_productos.sort_values([\"Lugar de Compra\", \"Cantidad de Ventas\"], ascending=[True, True])\n",
         "top_menos_vendidos = productos_menos_vendidos.groupby(\"Lugar de Compra\").first().reset_index()\n",
         "\n",
-        "# Mostrar resultados\n",
+        "# Mostramos resultados\n",
         "print(\"Productos más vendidos por tienda:\")\n",
         "print(top_mas_vendidos)\n",
         "\n",
@@ -690,9 +690,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d426fabf-a1a1-4b25-990b-86caa81d0575"
+        "outputId": "ef75f1cb-136b-4eeb-f414-747b883a0047"
       },
-      "execution_count": 113,
+      "execution_count": 125,
       "outputs": [
         {
           "output_type": "stream",
@@ -757,7 +757,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Calcular el costo promedio de envío por tienda (Lugar de Compra)\n",
+        "# Calculamos el costo promedio de envío por tienda (Lugar de Compra)\n",
         "costo_envio_por_tienda = tienda.groupby(\"Lugar de Compra\")[\"Costo de envío\"].mean().round(2).reset_index()\n",
         "\n",
         "print(\"Costo promedio de envío por tienda:\")\n",
@@ -768,9 +768,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "cbb7fc1c-4684-4dbf-fd26-bbdfd8ad05e3"
+        "outputId": "6f5c88c7-d0bc-446b-fccc-b25ee2a8e7fc"
       },
-      "execution_count": 114,
+      "execution_count": 126,
       "outputs": [
         {
           "output_type": "stream",
@@ -806,10 +806,10 @@
       "source": [
         "import matplotlib.pyplot as plt\n",
         "\n",
-        "# 1. Calcula el costo promedio de envío por tienda\n",
+        "# 1. Calculamos el costo promedio de envío por tienda\n",
         "envio_prom = tienda.groupby(\"Tienda\")[\"Costo de envío\"].mean().round(2)\n",
         "\n",
-        "# 2. Dibuja el gráfico de barras\n",
+        "# 2. Dibujamos el gráfico de barras\n",
         "plt.figure(figsize=(8, 5))\n",
         "plt.bar(envio_prom.index, envio_prom.values)\n",
         "plt.title(\"Costo Promedio de Envío por Tienda\")\n",
@@ -825,9 +825,9 @@
           "height": 471
         },
         "id": "qtW-lwNq1wCE",
-        "outputId": "6c9c13c7-c012-45fc-fe62-6c861e75054e"
+        "outputId": "d8798b7f-37aa-43d2-be92-520074c45cdd"
       },
-      "execution_count": 115,
+      "execution_count": 127,
       "outputs": [
         {
           "output_type": "display_data",
@@ -888,9 +888,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wS0rh6m9bdKA",
-        "outputId": "f462342a-9ca4-4bd8-a8cd-0b6fc4f2c05b"
+        "outputId": "45ce59e2-0967-486b-f442-ad6491d97cc1"
       },
-      "execution_count": 119,
+      "execution_count": 128,
       "outputs": [
         {
           "output_type": "stream",
@@ -904,7 +904,7 @@
             "====Facturación total====\n",
             "\n",
             "-Valledupar: $1 177 600\n",
-            "-(Inírida la segunda mas baja -- factura $2 864 800 — ¡más del doble!\n",
+            "-Inírida --la --segunda-- mas-- baja -- factura $2 864 800 — ¡más del doble!\n",
             "\n",
             "-Volumen de ventas:\n",
             "Sólo 2 ventas en su categoría top y 1 venta en su producto top.\n",
